<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etSignupName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginEnd="@dimen/login_form_margin"
                android:ems="10"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etSignupSurname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginTop="@dimen/login_form_padding"
                android:layout_marginEnd="@dimen/login_form_margin"
                android:ems="10"
                android:hint="@string/prompt_surname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etSignupUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginTop="@dimen/login_form_padding"
                android:layout_marginEnd="@dimen/login_form_margin"
                android:ems="10"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etSignupEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginTop="@dimen/login_form_padding"
                android:layout_marginEnd="@dimen/login_form_margin"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etSignupPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginTop="@dimen/login_form_padding"
                android:layout_marginEnd="@dimen/login_form_margin"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etSignupConfirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginTop="@dimen/login_form_padding"
                android:layout_marginEnd="@dimen/login_form_margin"
                android:ems="10"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btSignupPickDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/login_form_margin"
                android:layout_marginVertical="@dimen/login_form_padding"
                android:backgroundTint="@color/white"
                android:text="@string/prompt_birthday" />

            <TextView
                android:id="@+id/tvBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/login_form_margin"
                android:layout_marginBottom="@dimen/login_form_padding"
                android:textAlignment="center"
                android:text="@string/default_birthdate"/>

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginTop="@dimen/login_form_padding"
                android:layout_marginEnd="@dimen/login_form_margin">

                <RadioButton
                    android:id="@+id/rbSignupMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_gender_male" />

                <RadioButton
                    android:id="@+id/rbSignupFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_gender_female" />

                <RadioButton
                    android:id="@+id/rbSignupOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_gender_other" />

            </RadioGroup>

            <Button
                android:id="@+id/btSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginTop="@dimen/login_form_padding"
                android:layout_marginEnd="@dimen/login_form_margin"
                android:backgroundTint="@color/magenta"
                android:text="@string/action_sign_up"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btToLoginFragment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_form_margin"
                android:layout_marginTop="@dimen/login_form_padding"
                android:layout_marginEnd="@dimen/login_form_margin"
                android:backgroundTint="@color/blue"
                android:text="@string/action_sign_in"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvSignupError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/login_form_margin"
                android:layout_marginVertical="@dimen/login_form_padding"
                android:background="@color/red_error"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/form_error_text"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>