<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">

        <item
            android:id="@+id/action_search"
            android:orderInCategory="100"
            android:title="@string/search"
            android:icon="@drawable/ic_baseline_search_24"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_notifications"
            android:orderInCategory="200"
            android:title="@string/notifications"
            android:icon="@drawable/ic_baseline_notifications_none_24"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="300"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            app:showAsAction="ifRoom" />
</menu>