<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="@dimen/login_form_padding">

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/login_form_padding"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/login_form_padding"
            android:text="@string/check_remember_me" />

        <Button
            android:id="@+id/btSignin"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/login_form_padding"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:backgroundTint="@color/magenta"
            android:text="@string/action_sign_in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btToSignupFragment"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/login_form_padding"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:backgroundTint="@color/blue"
            android:text="@string/action_sign_up"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvLoginError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_form_margin"
            android:layout_marginVertical="@dimen/login_form_padding"
            android:background="@color/red_error"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/form_error_text"
            android:visibility="invisible" />

    </LinearLayout>

</FrameLayout>